<resources>
    <string name="chatbot_welcome_message">Welcome! You can ask me things like: \n - When is the next Match?, \n - How\'s the scoring?, \n - Give me Lionel Messi social networks</string>
    <string name="chatbot_placeholder_textinput">Ask me something…</string>
    <string name="next_match">Matches</string>
    <string name="positions">Positions</string>
    <string name="stats">Statistics</string>
    <string name="players">Players</string>
    <string name="next_match_question">Whats next?</string>
    <string name="stats_question">Show me stats</string>
    <string name="table_question">Show me the table</string>
    <string name="players_question">Who are the team players?</string>
    <string name="tickets">Tickets</string>
    <string name="directions">Get Directions</string>
    <string name="open_directions">Select the app that you want to use to get directions.</string>
    <string name="venue">Stadium</string>
    <string name="more">See more</string>
    <string name="open">Open</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="liveticker_updates">There is a live match!. Do you want to keep updated with live ticker feed?</string>
    <string name="no_information_available">Sorry, I don\'t have any info about that yet.</string>
    <string name="Defender">Defender</string>
    <string name="Goalkeeper">Goalkeeper</string>
    <string name="Midfielder">Midfielder</string>
    <string name="Forward">Forward</string>
    <string name="off_substitution">In</string>
    <string name="on_substitution">Out</string>
    <string name="buy">Buy</string>
    <string name="read_more">Read more…</string>
    <string name="chatbot_is_writing">Writing…</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="no_connection">Oops! We cannot connect to the chatbot. Check your internet connection and try again.</string>
    <string name="retry">Retry</string>

    <string name="app_name">Nuka SDK</string>
    <string name="bot_name">Nuka</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="contract">Contract</string>
    <string name="url_error_message">An error has occurred while trying to open this URL</string>
    <string name="abbr_points">P</string>
    <string name="abbr_won_games">W</string>
    <string name="abbr_draw_games">D</string>
    <string name="abbr_lost_games">L</string>
    <string name="substitution_description">In: %1$s \nOut: %2$s</string>
    <string name="error_message">An error has occurred</string>
</resources>
